# ARES

./: .env.example  .gitignore  README.md  implementation_guide.md  pyproject.toml  research_system_spec.md  title.txt
agents/: adversary.py  architect.py  consolidator.py  enumerator.py  librarian.py  ranker.py  scout.py  spec_writer.py
core/: brief.py  compaction.py  config.py  context_compaction.py  llm.py  manual_import.py  memory.py  orchestrator.py  pdf_ingest.py  retrieval.py  schemas.py
data/context/: bottleneck.txt  pipeline_description.txt
data/runs/: v20260328_01.json
outputs/manual_packets/vpacket/: README.md  graveyard.md  hypothesis_inventory.md  literature_digest.md  manual_grounded_stage2_brainstorm.txt  problem_context.md
prompts/: adversary.txt  architect_free_range.txt  architect_grounded.txt  consolidator.txt  enumerator.txt  librarian.txt  manual_free_range.txt  manual_grounded.txt  manual_grounded_stage1_context.txt  manual_grounded_stage3_finalize.txt  ranker.txt  scout.txt  spec_writer.txt
tests/: test_brief_compaction.py  test_config_and_chunking.py  test_manual_packet.py  test_multi_run.py
